Minor additions and optimizations * Added Project link and Scroll to Top btns to home page * Prevent <Link>s from scrolling to bottom of rendered routes * Adjusted some skill proficiencies and added new category * Removed unneeded useEffect * Removed unnecessary comments * Added canonical URLs and meta descriptions * Hide top nav once main page content has reached top of viewport to avoid showing empty gap on top * Globally style links * Minor fixes to types * Removed duplicate instances of certain content wrappers * Decomposed Bio into sections * Styled Related Courses in Education home section

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* Light Mode Color Theme */
-  /* --color-background: #FEEFE5; */
-  --color-background: #E1E0DC;
+  --color-background: #e1e0dc;
   --color-text-primary: #000000;
   --color-text-alt: #838383;
   --color-text-opposite: #FFFFFF;
@@ -95,15 +94,18 @@ main {
   width: 80%;
 }
 
-/* TODO: Fix home education section */
-details {
-  cursor: pointer !important;
+a {
+  text-decoration: none;
+  color: var(--color-accent);
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
   .constraint {
-    padding: 0rem;
+    padding: 0;
     width: 100%;
-    /* padding: 0.25rem; */
   }
 }
