--- a/src/styles/Socials.module.css
+++ b/src/styles/Socials.module.css
@@ -3,8 +3,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    align-self: flex-start;
-    margin-top: 2rem;
 }
 
 .contact {
@@ -18,7 +16,6 @@
     display: flex;
     flex-direction: row;
     row-gap: 1rem;
-    /* justify-content: center; */
     align-items: center;
     align-self: flex-start;
     width: 100%;
